--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ bio: "Postdoc at Caltech - Earthquakes, faults and inverse problems"
 locale: en_US
 url:
 image:
-  feature: 
+  feature: portrait.jpg
 
 # Jekyll configuration
 
