--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ image:
 
 permalink:   pretty
 markdown:    kramdown
-highlighter: bleu
+highlighter: rouge
 sass:
   sass_dir: _sass
   style: compressed
