--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 title: Théa Ragon
 bio: "Postdoc at Caltech - Earthquakes, faults and inverse problems"
 locale: en_US
-url:
+url: thearagon.github.io
 image:
   feature: 
 baseurl: /thearagon.github.io
