--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ sass:
 # Plugins (previously gems:)
 plugins:
   #- jekyll-paginate
-  #- jekyll-sitemap
+  - jekyll-sitemap
   #- jekyll-gist
   #- jekyll-feed
   - jekyll-include-cache
@@ -70,14 +70,12 @@ plugins:
 #markdown_ext: "markdown,mkdown,mkdn,mkd,md"  
 
 kramdown:
-  input: GFM
-  hard_wrap: false
   auto_ids: true
   footnote_nr: 1
   entity_output: as_char
   toc_levels: 1..6
-  smart_quotes: lsquo,rsquo,ldquo,rdquo
   enable_coderay: false
+
 
 
 # Site owner
