--- a/_config.yml
+++ b/_config.yml
@@ -18,56 +18,56 @@ sass:
   style: compressed
 # Plugins (previously gems:)
 plugins:
-  #- jekyll-paginate
+  - jekyll-paginate
   - jekyll-sitemap
-  #- jekyll-gist
-  #- jekyll-feed
+  - jekyll-gist
+  - jekyll-feed
   - jekyll-include-cache
 
 # mimic GitHub Pages with --safe
-#whitelist:
-  #- jekyll-paginate
-  #- jekyll-sitemap
-  #- jekyll-gist
-  #- jekyll-feed
-  #- jekyll-include-cache
+whitelist:
+  - jekyll-paginate
+  - jekyll-sitemap
+  - jekyll-gist
+  - jekyll-feed
+  - jekyll-include-cache
 
 # Reading Files
-#include:
-  #- .htaccess
-  #- _pages
-#exclude:
-  #- "*.sublime-project"
-  #- "*.sublime-workspace"
-  #- vendor
-  #- .asset-cache
-  #- .bundle
-  #- .jekyll-assets-cache
-  #- .sass-cache
-  #- assets/js/plugins
-  #- assets/js/_main.js
-  #- assets/js/vendor
-  #- Capfile
-  #- CHANGELOG
-  #- config
-  #- Gemfile
-  #- Gruntfile.js
-  #- gulpfile.js
-  #- LICENSE
-  #- log
-  #- node_modules
-  #- package.json
-  #- package-lock.json
-  #- Rakefile
-  #- README
-  #- tmp
-  #- /docs # ignore Minimal Mistakes /docs
-  #- /test # ignore Minimal Mistakes /test
-#keep_files:
-  #- .git
-  #- .svn
-#encoding: "utf-8"
-#markdown_ext: "markdown,mkdown,mkdn,mkd,md"  
+include:
+  - .htaccess
+  - _pages
+exclude:
+  - "*.sublime-project"
+  - "*.sublime-workspace"
+  - vendor
+  - .asset-cache
+  - .bundle
+  - .jekyll-assets-cache
+  - .sass-cache
+  - assets/js/plugins
+  - assets/js/_main.js
+  - assets/js/vendor
+  - Capfile
+  - CHANGELOG
+  - config
+  - Gemfile
+  - Gruntfile.js
+  - gulpfile.js
+  - LICENSE
+  - log
+  - node_modules
+  - package.json
+  - package-lock.json
+  - Rakefile
+  - README
+  - tmp
+  - /docs # ignore Minimal Mistakes /docs
+  - /test # ignore Minimal Mistakes /test
+keep_files:
+  - .git
+  - .svn
+encoding: "utf-8"
+markdown_ext: "markdown,mkdown,mkdn,mkd,md"  
 
 kramdown:
   input: GFM
@@ -116,5 +116,5 @@ owner:
   weibo: #username
   flickr: #username
 
-include: [".htaccess"]
-exclude: ["lib", "config.rb", "Capfile", "config", "log", "Rakefile", "Rakefile.rb", "tmp", "less", "*.sublime-project", "*.sublime-workspace", "test", "spec", "Gruntfile.js", "package.json", "node_modules", "Gemfile", "Gemfile.lock", "LICENSE", "README.md"]
+#include: [".htaccess"]
+#exclude: ["lib", "config.rb", "Capfile", "config", "log", "Rakefile", "Rakefile.rb", "tmp", "less", "*.sublime-project", "*.sublime-workspace", "test", "spec", "Gruntfile.js", "package.json", "node_modules", "Gemfile", "Gemfile.lock", "LICENSE", "README.md"]
