--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,8 +4,8 @@
     url: /publications/
   - title: "Teaching"
     url: /teaching/
-  #- title: "Outreach"
-    #url: /outreach/
+  - title: "Outreach"
+    url: /outreach/
   - title: "CV"
     url: /cv/
   #- title: "Posts"
