--- a/_config.yml
+++ b/_config.yml
@@ -10,12 +10,12 @@ baseurl: /thearagon.github.io
 
 # Jekyll configuration
 
-permalink:   pretty
-markdown:    kramdown
+markdown: kramdown
 highlighter: rouge
-sass:
-  sass_dir: _sass
-  style: compressed
+lsi: false
+excerpt_separator: "\n\n"
+incremental: false
+
 # Plugins (previously gems:)
 plugins:
   - jekyll-paginate
@@ -69,6 +69,7 @@ keep_files:
 encoding: "utf-8"
 markdown_ext: "markdown,mkdown,mkdn,mkd,md"  
 
+# Markdown Processing
 kramdown:
   input: GFM
   hard_wrap: false
@@ -79,6 +80,16 @@ kramdown:
   smart_quotes: lsquo,rsquo,ldquo,rdquo
   enable_coderay: false
 
+# Sass/SCSS
+sass:
+  sass_dir: _sass
+  style: compressed # https://sass-lang.com/documentation/file.SASS_REFERENCE.html#output_style
+
+# Outputting
+permalink: /:categories/:title/
+paginate: 5 # amount of posts to show
+paginate_path: /page:num/
+timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones  
 
 # Site owner
 owner:
