--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ owner:
   facebook: #username
   google:
     plus: #username
-    analytics: 
+    analytics: UA-172949099-1
     verify:
     ad-client:
     ad-slot:
@@ -127,5 +127,11 @@ owner:
   weibo: #username
   flickr: #username
 
+analytics:
+  provider: "google-gtag"
+  google:
+    tracking_id: "UA-172949099-1"
+    anonymize_ip: false # default  
+  
 #include: [".htaccess"]
 #exclude: ["lib", "config.rb", "Capfile", "config", "log", "Rakefile", "Rakefile.rb", "tmp", "less", "*.sublime-project", "*.sublime-workspace", "test", "spec", "Gruntfile.js", "package.json", "node_modules", "Gemfile", "Gemfile.lock", "LICENSE", "README.md"]
