--- a/_config.yml
+++ b/_config.yml
@@ -115,7 +115,7 @@ owner:
   facebook: #username
   google:
     plus: #username
-    analytics: 
+    analytics: UA-172949099-1
     verify:
     ad-client:
     ad-slot:
